Change action name to lowercase 'dockdesk'

--- a/action.yml
+++ b/action.yml
@@ -1,4 +1,4 @@
-name: 'DockDesk'
+name: 'dockdesk'
 description: 'AI Auditor that ensures Code matches Documentation.'
 author: 'Srivatsa'
 branding:
