Rename action from 'dockdesk' to 'dock-desk'

--- a/action.yml
+++ b/action.yml
@@ -1,4 +1,4 @@
-name: 'dockdesk'
+name: 'dock-desk'
 description: 'AI Auditor that ensures Code matches Documentation.'
 author: 'Srivatsa'
 branding:
